--- a/src/AML_final_leukemia.ipynb
+++ b/src/AML_final_leukemia.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Advanced Machine Learning Final\n",
+    "# Neural Networks in Oncology\n",
     "\n",
-    "#### 1.\n",
+    "#### Research Question\n",
     "\n",
-    "The problem to be solved with this model is image classification of blood cells to distinguish healthy blood cells and leukemia-infected blood cells. The goal is to automate leukemia detection and validation in cancer diagnosis using deep learning. The reason why this task is important and still needs improvement is because it is still difficult to identify leukemic blasts caused by Acute Lymphoblastic Leukemia (ALL). The purpose of this tool is to assist oncologists with their often qualitative evaluation of cancer disease.\n",
+    "The problem to be solved with these models is image classification of blood cells to distinguish healthy blood cells and leukemia-infected blood cells. The goal is to automate leukemia detection and validation in cancer diagnosis using deep learning. The reason why this task is important and still needs improvement is because it is still difficult to identify leukemic blasts caused by Acute Lymphoblastic Leukemia (ALL). The purpose of this tool is to assist oncologists with their often qualitative evaluation of cancer disease.\n",
     "\n",
-    "#### 2.\n",
+    "#### Data\n",
     "\n",
     "The project dataset can be found here: https://www.kaggle.com/datasets/andrewmvd/leukemia-classification. The dataset contains 15,135 microscopic stained blood cell images from 118 patients. They are labeled as either Normal Cell (HEM) or Leukemia Blast (ALL). Of data provided, I will be sampling 1,000 images for training, validation, and testing. \n",
     "\n",
-    "#### 3. \n",
+    "#### Why deep learning?\n",
     "\n",
     "Deep learning systems would be a good methodological choice for this problem due to the current qualitative evaluation in cancer diagnosis in oncology. Patients are often not 'looking' to see if they have cancer and will not go to doctor until they are experiencing symptoms. If there were to be a way to automatically flag potential leukemia blasts from routine check-up lab tests (blood samples) by incorporating deep learning systems, it would help a lot of children identify ALL during early onset. Although this is a trivial dataset found off of kaggle, the development of the DL blood cell classification model could contribute to the improvement to problems identified in question #1. \n"
    ]
@@ -29,6 +29,7 @@
     "\n",
     "### Directory structure\n",
     "\n",
+    "```\n",
     "C-NMC_Leukemia\n",
     "|__ training_data\n",
     "    |______ fold_0\n",
@@ -39,7 +40,8 @@
     "        |______ hem: []\n",
     "    |______ fold_2\n",
     "        |______ all: []\n",
-    "        |______ hem: []"
+    "        |______ hem: []\n",
+    "```"
    ]
   },
   {
